@@ -1570,7 +1570,10 @@ SCIP_DECL_CONSPRESOL(consPresolVarbound)
       if( !consdata->addvarbounds )
       {
          SCIP_Bool infeasible;
+         int nlocalchgbds;
          
+         nlocalchgbds = 0;
+
          /* if lhs is finite, we have a variable lower bound: lhs <= x + c*y  =>  x >= -c*y + lhs */
          if( !SCIPisInfinity(scip, -consdata->lhs) )
          {
@@ -1578,9 +1581,11 @@ SCIP_DECL_CONSPRESOL(consPresolVarbound)
                SCIPvarGetName(consdata->var), -consdata->vbdcoef, SCIPvarGetName(consdata->vbdvar), consdata->lhs);
 
             SCIP_CALL( SCIPaddVarVlb(scip, consdata->var, consdata->vbdvar, -consdata->vbdcoef, consdata->lhs,
-                  &infeasible, NULL) );
+                  &infeasible, &nlocalchgbds) );
             assert(!infeasible);
             
+            *nchgbds += nlocalchgbds;
+
             /* if lhs is finite, and x is not continuous we can add more variable bounds */
             if( SCIPvarGetType(consdata->var) != SCIP_VARTYPE_CONTINUOUS )
             {
@@ -1594,8 +1599,10 @@ SCIP_DECL_CONSPRESOL(consPresolVarbound)
 
                   /* if c > 0, we have a variable lower bound: lhs <= x + c*y  =>  y >= (lhs-x)/c */
                   SCIP_CALL( SCIPaddVarVlb(scip, consdata->vbdvar, consdata->var, 
-                        -1.0/consdata->vbdcoef, consdata->lhs/consdata->vbdcoef, &infeasible, NULL) );
+                        -1.0/consdata->vbdcoef, consdata->lhs/consdata->vbdcoef, &infeasible, &nlocalchgbds) );
                   assert(!infeasible);
+
+                  *nchgbds += nlocalchgbds;
                }
                else
                {
@@ -1605,8 +1612,10 @@ SCIP_DECL_CONSPRESOL(consPresolVarbound)
 
                   /* if c < 0, we have a variable upper bound: lhs <= x + c*y  =>  y <= (lhs-x)/c */
                   SCIP_CALL( SCIPaddVarVub(scip, consdata->vbdvar, consdata->var, 
-                        -1.0/consdata->vbdcoef, consdata->lhs/consdata->vbdcoef, &infeasible, NULL) );
+                        -1.0/consdata->vbdcoef, consdata->lhs/consdata->vbdcoef, &infeasible, &nlocalchgbds) );
                   assert(!infeasible);
+
+                  *nchgbds += nlocalchgbds;
                }
             }
          }
@@ -1618,8 +1627,10 @@ SCIP_DECL_CONSPRESOL(consPresolVarbound)
                SCIPvarGetName(consdata->var), -consdata->vbdcoef, SCIPvarGetName(consdata->vbdvar), consdata->rhs);
 
             SCIP_CALL( SCIPaddVarVub(scip, consdata->var, consdata->vbdvar, -consdata->vbdcoef, consdata->rhs,
-                  &infeasible, NULL) );
+                  &infeasible, &nlocalchgbds) );
             assert(!infeasible);
+
+            *nchgbds += nlocalchgbds;
 
             /* if rhs is finite, and x is not continuous we can add more variable bounds */
             if( SCIPvarGetType(consdata->var) != SCIP_VARTYPE_CONTINUOUS )
@@ -1634,8 +1645,10 @@ SCIP_DECL_CONSPRESOL(consPresolVarbound)
 
                   /* if c > 0 we have a variable upper bound: x + c*y <= rhs  =>  y <= (rhs-x)/c */
                   SCIP_CALL( SCIPaddVarVub(scip, consdata->vbdvar, consdata->var, 
-                        -1.0/consdata->vbdcoef, consdata->rhs/consdata->vbdcoef, &infeasible, NULL) );
+                        -1.0/consdata->vbdcoef, consdata->rhs/consdata->vbdcoef, &infeasible, &nlocalchgbds) );
                   assert(!infeasible);
+
+                  *nchgbds += nlocalchgbds;
                }
                else
                {
@@ -1645,11 +1658,12 @@ SCIP_DECL_CONSPRESOL(consPresolVarbound)
                   
                   /* if c < 0 we have a variable lower bound: x + c*y <= rhs  =>  y >= (rhs-x)/c */
                   SCIP_CALL( SCIPaddVarVlb(scip, consdata->vbdvar, consdata->var, 
-                        -1.0/consdata->vbdcoef, consdata->rhs/consdata->vbdcoef, &infeasible, NULL) );
+                        -1.0/consdata->vbdcoef, consdata->rhs/consdata->vbdcoef, &infeasible, &nlocalchgbds) );
                   assert(!infeasible);
+
+                  *nchgbds += nlocalchgbds;
                }
             }
-            
          }
          consdata->addvarbounds = TRUE;
       }
